Login page created and a few changes made in settings.json. Currently working on authentication
Co-Authored-By: TlotlisoMokatiJohn <74985998+TlotlisoMokatiJohn@users.noreply.github.com>
Co-Authored-By: Felix Nyamweya <57399460+fnyamweya@users.noreply.github.com>
Co-Authored-By: Gideon Kimutai <gideon.kimutai.kim@gmail.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "cSpell.words": [
         "Primarybtn"
-    ]
+    ],
+
+    "editor.formatOnSave": false,
+    "javascript.format.enable": false
 }
