clear fields after submit done...

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "BUDDIE",
         "Primarybtn",
         "Sokoni",
+        "initialstate",
         "setconfirm",
         "uselocalstorage"
     ]
