user-should-be-able-to-signin

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,12 @@
 {
     "cSpell.words": [
         "BUDDIE",
-        "Primarybtn",
-        "Sokoni",
         "initialstate",
+        "Islogged",
+        "issloged",
+        "Primarybtn",
         "setconfirm",
+        "Sokoni",
         "uselocalstorage"
     ]
 }
